fix: selectors: add minor paddding in start align (#364)

--- a/src/components/CheckBox/checkbox.module.scss
+++ b/src/components/CheckBox/checkbox.module.scss
@@ -27,6 +27,10 @@
                 display: flex;
             }
 
+            &.align-start .checkmark {
+                margin-top: $space-xxxs;
+            }
+
             &.align-end {
                 align-items: flex-end;
                 display: flex;
